--- a/home/.config/helix/config.toml
+++ b/home/.config/helix/config.toml
@@ -18,6 +18,10 @@ E = "extend_next_word_end"
 
 g = { "k" = "goto_file_start", "j" = "goto_last_line" }
 
+# "A-h" = "extend_to_line_start"
+# "A-l" = "extend_to_line_end"
+# "A-L" = "extend_to_line_end_newline"
+
 "C-h" = "rotate_view"
 "C-l" = "rotate_view"
 
@@ -25,6 +29,8 @@ g = { "k" = "goto_file_start", "j" = "goto_last_line" }
 "A-x" = "extend_to_line_bounds"
 
 "space" = { "k" = "hover" }
+
+"A-j" = "join_selections"
 
 [keys.insert]
 "C-space" = "completion"
