--- a/services/sway.service
+++ b/services/sway.service
@@ -7,8 +7,7 @@ After=graphical-session-pre.target
 
 [Service]
 Type=simple
-EnvironmentFile=-%h/.config/sway/env
-ExecStart=/usr/bin/sway
+ExecStart=/usr/bin/sway -d
 Restart=on-failure
 RestartSec=1
 TimeoutStopSec=10
