ssh: Update hosts

--- a/home/.ssh/config
+++ b/home/.ssh/config
@@ -54,6 +54,12 @@ Host upnl-gitlab
     PreferredAuthentications publickey
     IdentityFile ~/.ssh/id_ed25519
 
+Host freedesktop-gitlab
+    HostName gitlab.freedesktop.org
+    User git
+    PreferredAuthentications publickey
+    IdentityFile ~/.ssh/id_ed25519
+
 Host spoqa-bitbucket
     HostName git.spoqa.com
     Port 7999
@@ -61,19 +67,19 @@ Host spoqa-bitbucket
     PreferredAuthentications publickey
     IdentityFile ~/.ssh/id_rsa
 
-Host oldgemini
+Host gemini
     HostName 121.140.51.227
     Port 2222
     User pbzweihander
     PreferredAuthentications publickey
     IdentityFile ~/.ssh/id_ed25519
 
-Host gemini
-    HostName gemini.upnl.org
+Host ebony
+    HostName upnl.org
     Port 2222
     User ec2-user
     PreferredAuthentications publickey
-    IdentityFile ~/.ssh/id_gemini
+    IdentityFile ~/.ssh/id_ebony
 
 Host sodrak
     HostName sodrak.upnl.org
@@ -107,7 +113,7 @@ Host litvyak
 
 Host lemare
     HostName 52.192.202.89
-    User thomas
+    User ec2-user
     PreferredAuthentications publickey
     IdentityFile ~/.ssh/id_ed25519
 
