Revert "kime: Bypass ControlL"
This reverts commit 6f1854ff5421a2a2fc4c299dae8784f36ebc717b.

--- a/home/.config/kime/config.yaml
+++ b/home/.config/kime/config.yaml
@@ -49,23 +49,20 @@ engine:
         - Hangul
         - Latin
       result: Consume
-    # C-Hangul:
-    #   behavior:
-    #     Switch: Latin
-    #   result: Consume
-    # S-Hangul:
-    #   behavior:
-    #     Switch: Hangul
-    #   result: Consume
+    C-Hangul:
+      behavior:
+        Switch: Latin
+      result: Consume
+    S-Hangul:
+      behavior:
+        Switch: Hangul
+      result: Consume
     Hangul:
       behavior:
         Toggle:
         - Hangul
         - Latin
       result: Consume
-    ContorlL:
-      behavior: Ignore
-      result: Bypass
   category_hotkeys:
     Hangul:
       ControlR:
