--- a/home/.config/sway/config
+++ b/home/.config/sway/config
@@ -68,7 +68,7 @@ input type:keyboard {
 }
 
 output eDP-1 {
-    pos 346 1350
+    pos 693 1350
     scale 1.5
 }
 
@@ -77,9 +77,10 @@ output HDMI-A-1 {
     scale 1.6
 }
 
-output DP-1 {
-    pos 2400 0
+output DP-2 {
+    pos 2400 -525
     scale 1.6
+    transform 270
 }
 
 bar {
