sway: Use -, = as workspace

--- a/home/.config/sway/config
+++ b/home/.config/sway/config
@@ -30,6 +30,8 @@ set $ws7 "7"
 set $ws8 "8"
 set $ws9 "9"
 set $ws10 "10"
+set $ws11 "11"
+set $ws12 "12"
 
 
 default_border pixel 2
@@ -133,6 +135,8 @@ bindsym $mod+7 workspace $ws7
 bindsym $mod+8 workspace $ws8
 bindsym $mod+9 workspace $ws9
 bindsym $mod+0 workspace $ws10
+bindsym $mod+minus workspace $ws11
+bindsym $mod+equal workspace $ws12
 
 bindsym $mod+Shift+1 move container to workspace $ws1
 bindsym $mod+Shift+2 move container to workspace $ws2
@@ -144,6 +148,8 @@ bindsym $mod+Shift+7 move container to workspace $ws7
 bindsym $mod+Shift+8 move container to workspace $ws8
 bindsym $mod+Shift+9 move container to workspace $ws9
 bindsym $mod+Shift+0 move container to workspace $ws10
+bindsym $mod+Shift+minus move container to workspace $ws11
+bindsym $mod+Shift+equal move container to workspace $ws12
 
 bindsym $mod+Control+Shift+$left move workspace to output left
 bindsym $mod+Control+Shift+$down move workspace to output down
@@ -170,8 +176,8 @@ bindsym $mod+space focus mode_toggle
 bindsym $mod+a focus parent
 bindsym $mod+z focus child
 
-bindsym $mod+minus move scratchpad
-bindsym $mod+equal scratchpad show
+bindsym $mod+Control+minus move scratchpad
+bindsym $mod+Control+equal scratchpad show
 
 bindsym --release Control+Print exec --no-startup-id $capture
 bindsym --release Print exec $capture_region
