--- a/home/.gitconfig
+++ b/home/.gitconfig
@@ -1,6 +1,6 @@
 # vim: noexpandtab sw=8
 [include]
-	path = .gitconfig.pgp
+	path = .gitconfig.local
 [user]
 	name = pbzweihander
 	email = pbzweihander@gmail.com
