git: no pager for stash

--- a/home/.gitconfig
+++ b/home/.gitconfig
@@ -40,6 +40,7 @@
 	log = delta
 	reflog = delta
 	show = delta
+	stash = false
 [interactive]
 	diffFilter = delta --color-only --features=interative
 [init]
