--- a/home/.config/kak/kak-lsp.toml
+++ b/home/.config/kak/kak-lsp.toml
@@ -80,11 +80,11 @@ timeout = 1800 # seconds = 30 minutes
 # command = "css-languageserver"
 # args = ["--stdio"]
 
-# [language.go]
-# filetypes = ["go"]
-# roots = ["Gopkg.toml", "go.mod", ".git", ".hg"]
-# command = "gopls"
-# offset_encoding = "utf-8"
+[language.go]
+filetypes = ["go"]
+roots = ["Gopkg.toml", "go.mod", ".git", ".hg"]
+command = "gopls"
+offset_encoding = "utf-8"
 
 # [language.haskell]
 # filetypes = ["haskell"]
@@ -125,11 +125,9 @@ timeout = 1800 # seconds = 30 minutes
 [language.python]
 filetypes = ["python"]
 roots = ["requirements.txt", "setup.py", ".git", ".hg", "pyproject.toml"]
-# command = "pyls"
-# command = "fnm"
-# args = ["exec", "--using", "system", "pyright-langserver", "--stdio"]
-command = "sh"
-args = ["-c", "/usr/bin/node $(which pyright-langserver) --stdio"]
+command = "pylsp"
+# command = "sh"
+# args = ["-c", "/usr/bin/node $(which pyright-langserver) --stdio"]
 # command = "pyright-langserver"
 # args = ["--stdio"]
 # offset_encoding = "utf-8"
@@ -141,26 +139,15 @@ args = ["-c", "/usr/bin/node $(which pyright-langserver) --stdio"]
 # python.linting.flake8Enabled = true
 # python.linting.flake8Path = "~/.local/bin/flake8"
 
-# [language.rust]
-# filetypes = ["rust"]
-# roots = ["Cargo.toml"]
-# command = "sh"
-# args = ["-c", "if command -v rustup >/dev/null; then $(rustup which rls); else rls; fi"]
-
 [language.rust]
 filetypes = ["rust"]
 roots = ["Cargo.toml"]
 command = "rust-analyzer"
 
-[language.rust.initialization_options]
-# If you get 'unresolved proc macro' warnings, you have two options
-# 1. The safe choice is two disable the warning:
-diagnostics.disabled = ["unresolved-proc-macro"]
-# 2. Or you can opt-in for proc macro support
-# procMacro.enable = true
+[language.rust.settings]
+procMacro.enable = true
 cargo.loadOutDirsFromCheck = true
 cargo.allFeatures = true
-# See https://github.com/rust-analyzer/rust-analyzer/issues/6448
 
 [language.terraform]
 filetypes = ["terraform"]
@@ -180,8 +167,14 @@ roots = [".git", "*.sql"]
 command = "sql-language-server"
 args = ["up", "--method", "stdio"]
 
-[language.typescript]
-filetypes = ["typescript", "javascript"]
-roots = [".git", "package.json"]
+# [language.typescript]
+# filetypes = ["typescript", "javascript"]
+# roots = [".git", "package.json"]
+# command = "typescript-language-server"
+# args = ["--stdio"]
+
+[language.tsx]
+filetypes = ["typescript"]
+roots = ["package.json"]
 command = "typescript-language-server"
 args = ["--stdio"]
