waybar: Replace network with tray

--- a/home/.config/waybar/config
+++ b/home/.config/waybar/config
@@ -15,10 +15,10 @@
     "cpu",
     "memory",
     "temperature",
-    "network",
     "pulseaudio",
     "backlight",
     "battery",
+    "tray",
     "clock"
   ],
   "sway/mode": {
@@ -89,14 +89,6 @@
       "",
       ""
     ],
-    "tooltip": false
-  },
-  "network": {
-    "format-wifi": "{essid} ",
-    "format-ethernet": "{ipaddr}/{cidr} ",
-    "format-linked": "{ifname} (No IP) ",
-    "format-disconnected": "Disconnected ⚠",
-    "format-alt": "{ifname}: {ipaddr}/{cidr}",
     "tooltip": false
   },
   "pulseaudio": {
