ssh: Update hosts

--- a/home/.ssh/config
+++ b/home/.ssh/config
@@ -1,15 +1,5 @@
 VisualHostKey=yes
 
-Host heinrike
-    HostName heinrike.pbzweihander.me
-    PreferredAuthentications publickey
-    IdentityFile ~/.ssh/id_ed25519
-
-Host helma
-    HostName helma.pbzweihander.me
-    PreferredAuthentications publickey
-    IdentityFile ~/.ssh/id_ed25519
-
 Host martini
     HostName martini.snucse.org
     PreferredAuthentications publickey
@@ -60,13 +50,6 @@ Host freedesktop-gitlab
     PreferredAuthentications publickey
     IdentityFile ~/.ssh/id_ed25519
 
-Host spoqa-bitbucket
-    HostName git.spoqa.com
-    Port 7999
-    User git
-    PreferredAuthentications publickey
-    IdentityFile ~/.ssh/id_rsa
-
 Host gemini
     HostName 121.140.51.227
     Port 2222
@@ -105,32 +88,21 @@ Host mimosa
     PreferredAuthentications publickey
     IdentityFile ~/.ssh/id_ed25519
 
-Host litvyak
-    HostName litvyak.pbzweihander.me
-    User xsirious
-    PreferredAuthentications publickey
-    IdentityFile ~/.ssh/id_ed25519
-
 Host lemare
     HostName 52.192.202.89
     User ec2-user
     PreferredAuthentications publickey
     IdentityFile ~/.ssh/id_ed25519
 
-Host crawl
-    HostName crawl.develz.org
-    User crawl
-    PreferredAuthentications publickey
-    IdentityFile ~/.ssh/id_crawl
-
-Host heidemarie
-    HostName 35.225.15.252
-    User pbzweihander
-    PreferredAuthentications publickey
-    IdentityFile ~/.ssh/id_ed25519
-
 Host i-* mi-*
     ProxyCommand sh -c "aws ssm start-session --target %h --document-name AWS-StartSSHSession --parameters 'portNumber=%p'"
     User ec2-user
+    PreferredAuthentications publickey
+    IdentityFile ~/.ssh/id_ed25519
+
+Host fightingfalcon
+    HostName 49.142.59.217
+    Port 12322
+    User pbzweihander
     PreferredAuthentications publickey
     IdentityFile ~/.ssh/id_ed25519
