ssh: Update hosts

--- a/home/.ssh/config
+++ b/home/.ssh/config
@@ -79,6 +79,7 @@ Host uriel
 Host edhelbroy
     HostName edhelbroy.upnl.org
     User pbzweihander
+    Port 2222
     PreferredAuthentications publickey
     IdentityFile ~/.ssh/id_ed25519
 
