--- a/home/.config/sway/config
+++ b/home/.config/sway/config
@@ -69,12 +69,18 @@ input type:keyboard {
 }
 
 output eDP-1 {
-    pos 347 1350
+    pos 347 1650
     scale 1.5
 }
 
 output HDMI-A-1 {
-    pos 0 0
+    pos 0 300
+    scale 1.6
+}
+
+output DP-2 {
+    pos 2400 0
+    transform 270
     scale 1.6
 }
 
