--- a/home/.config/sway/config
+++ b/home/.config/sway/config
@@ -13,7 +13,7 @@ set $floating_term alacritty --class floatingAlacritty
 set $launcher sirula
 
 # Using swaylock-effects (https://github.com/mortie/swaylock-effects)
-set $lock swaylock --clock --indicator --screenshots --effect-pixelate 32
+set $lock swaylock --font "Victor Mono" --clock --indicator --screenshots --effect-pixelate 32
 
 set $capture grim "$(xdg-user-dir PICTURES)/screenshots/$(date +'screenshot_%Y-%m-%d_%H-%M-%S.png')"
 set $capture_region grim -g "$(slurp)" "$(xdg-user-dir PICTURES)/screenshots/$(date +'screenshot_%Y-%m-%d_%H-%M-%S.png')"
