sway: chatan-nakiri: Add scroll_factor

--- a/home/.config/sway/chatan-nakiri.config
+++ b/home/.config/sway/chatan-nakiri.config
@@ -1,6 +1,7 @@
 input "7855:36:ClockworkPI_DevTerm_Mouse" {
 	scroll_method on_button_down
 	scroll_button 274
+	scroll_factor 0.5
 }
 
 output DSI-1 {
