ssh: Add barkhorn to hosts

--- a/home/.ssh/config
+++ b/home/.ssh/config
@@ -95,6 +95,12 @@ Host lemare
     PreferredAuthentications publickey
     IdentityFile ~/.ssh/id_ed25519
 
+Host barkhorn
+    HostName 52.69.238.146
+    User admin
+    PreferredAuthentications publickey
+    IdentityFile ~/.ssh/id_ed25519
+
 Host i-* mi-*
     ProxyCommand sh -c "aws ssm start-session --target %h --document-name AWS-StartSSHSession --parameters 'portNumber=%p'"
     User ec2-user
