--- a/home/.config/sway/config
+++ b/home/.config/sway/config
@@ -179,12 +179,12 @@ bindsym $mod+Control+equal scratchpad show
 bindsym --release Control+Print exec --no-startup-id $capture
 bindsym --release Print exec $capture_region
 
-bindsym XF86AudioRaiseVolume exec --no-startup-id pactl -- set-sink-volume 0 +5%
-bindsym XF86AudioLowerVolume exec --no-startup-id pactl -- set-sink-volume 0 -5%
-bindsym XF86AudioMute exec --no-startup-id pactl -- set-sink-mute 0 toggle
-bindsym $mod+F12 exec --no-startup-id pactl -- set-sink-volume 0 +5%
-bindsym $mod+F11 exec --no-startup-id pactl -- set-sink-volume 0 -5%
-bindsym $mod+F10 exec --no-startup-id pactl -- set-sink-mute 0 toggle
+bindsym XF86AudioRaiseVolume exec --no-startup-id pactl -- set-sink-volume @DEFAULT_SINK@ +5%
+bindsym XF86AudioLowerVolume exec --no-startup-id pactl -- set-sink-volume @DEFAULT_SINK@ -5%
+bindsym XF86AudioMute exec --no-startup-id pactl -- set-sink-mute @DEFAULT_SING toggle
+bindsym $mod+F12 exec --no-startup-id pactl -- set-sink-volume @DEFAULT_SINK@ +5%
+bindsym $mod+F11 exec --no-startup-id pactl -- set-sink-volume @DEFAULT_SINK@ -5%
+bindsym $mod+F10 exec --no-startup-id pactl -- set-sink-mute @DEFAULT_SINK@ toggle
 
 bindsym XF86MonBrightnessUp exec --no-startup-id brightnessctl set +10%
 bindsym XF86MonBrightnessDown exec --no-startup-id brightnessctl set 10%-
