--- a/home/.config/sway/config
+++ b/home/.config/sway/config
@@ -181,7 +181,7 @@ bindsym --release Print exec $capture_region
 
 bindsym XF86AudioRaiseVolume exec --no-startup-id pactl -- set-sink-volume @DEFAULT_SINK@ +5%
 bindsym XF86AudioLowerVolume exec --no-startup-id pactl -- set-sink-volume @DEFAULT_SINK@ -5%
-bindsym XF86AudioMute exec --no-startup-id pactl -- set-sink-mute @DEFAULT_SING toggle
+bindsym XF86AudioMute exec --no-startup-id pactl -- set-sink-mute @DEFAULT_SINK@ toggle
 bindsym $mod+F12 exec --no-startup-id pactl -- set-sink-volume @DEFAULT_SINK@ +5%
 bindsym $mod+F11 exec --no-startup-id pactl -- set-sink-volume @DEFAULT_SINK@ -5%
 bindsym $mod+F10 exec --no-startup-id pactl -- set-sink-mute @DEFAULT_SINK@ toggle
