helix: Update config

--- a/home/.config/helix/config.toml
+++ b/home/.config/helix/config.toml
@@ -4,6 +4,9 @@ theme = "snazzy"
 mouse = false
 middle-click-paste = false
 auto-pairs = false
+color-modes = true
+cursorline = true
+cursorcolumn = true
 
 [editor.lsp]
 display-messages = true
