git: Add allowedSignersFile config

--- a/home/.gitconfig
+++ b/home/.gitconfig
@@ -7,6 +7,8 @@
 	signingKey = ~/.ssh/id_ed25519.pub
 [gpg]
 	format = ssh
+[gpg "ssh"]
+	allowedSignersFile = ~/.config/git/allowed_signers
 [commit]
 	gpgsign = true
 [core]
