ssh: Add rossmann

--- a/home/.ssh/config
+++ b/home/.ssh/config
@@ -113,3 +113,10 @@ Host fightingfalcon
     User pbzweihander
     PreferredAuthentications publickey
     IdentityFile ~/.ssh/id_ed25519
+
+Host rossmann
+    HostName 120.50.94.126
+    Port 22
+    User pbzweihander
+    PreferredAuthentications publickey
+    IdentityFile ~/.ssh/id_ed25519
