waybar: Enable tooltip for notification

--- a/home/.config/waybar/rossmann.config
+++ b/home/.config/waybar/rossmann.config
@@ -116,7 +116,7 @@
     "tooltip": false
   },
   "custom/notification": {
-    "tooltip": false,
+    "tooltip": true,
     "format": "{icon}",
     "format-icons": {
       "notification": "<span foreground='red'><sup></sup></span>",
