--- a/home/.config/waybar/config
+++ b/home/.config/waybar/config
@@ -117,7 +117,7 @@
     "tooltip": false
   },
   "custom/notification": {
-    "tooltip": false,
+    "tooltip": true,
     "format": "{icon}",
     "format-icons": {
       "notification": "<span foreground='red'><sup></sup></span>",
