--- a/home/.config/waybar/linnamaa.config
+++ b/home/.config/waybar/linnamaa.config
@@ -118,7 +118,7 @@
     "tooltip": false
   },
   "custom/notification": {
-    "tooltip": false,
+    "tooltip": true,
     "format": "{icon}",
     "format-icons": {
       "notification": "<span foreground='red'><sup></sup></span>",
