--- a/home/.config/waybar/config
+++ b/home/.config/waybar/config
@@ -122,8 +122,8 @@
     "format-icons": {
       "notification": "<span foreground='red'><sup></sup></span>",
       "none": "<sup> </sup>",
-      "dnd-notification": "<sup> </sup>",
-      "dnd-none": ""
+      "dnd-notification": "<span foreground='red'><sup></sup></span>",
+      "dnd-none": "<sup> </sup>"
     },
     "return-type": "json",
     "exec-if": "which swaync-client",
