--- a/home/.config/waybar/linnamaa.config
+++ b/home/.config/waybar/linnamaa.config
@@ -123,8 +123,8 @@
     "format-icons": {
       "notification": "<span foreground='red'><sup></sup></span>",
       "none": "<sup> </sup>",
-      "dnd-notification": "<sup> </sup>",
-      "dnd-none": ""
+      "dnd-notification": "<span foreground='red'><sup></sup></span>",
+      "dnd-none": "<sup> </sup>"
     },
     "return-type": "json",
     "exec-if": "which swaync-client",
