sway: Replace sirula with anyrun

--- a/home/.config/sway/config
+++ b/home/.config/sway/config
@@ -10,7 +10,7 @@ set $right l
 
 set $term alacritty
 set $floating_term alacritty --class floatingAlacritty
-set $launcher sirula
+set $launcher anyrun
 
 set $capture grim "$(xdg-user-dir PICTURES)/screenshots/$(date +'screenshot_%Y-%m-%d_%H-%M-%S.png')"
 set $capture_region grim -g "$(slurp)" "$(xdg-user-dir PICTURES)/screenshots/$(date +'screenshot_%Y-%m-%d_%H-%M-%S.png')"
@@ -20,8 +20,6 @@ set $pavucontrol pavucontrol
 set $nmtui alacritty --class floatingNmtui -e nmtui
 set $spotify_tui alacritty --class floatingSpotifytui -e spt
 set $floating_pcmanfm pcmanfm --class=floatingPCManFM
-# https://github.com/Zeioth/wofi-emoji
-set $emoji_picker $HOME/utils/wofi-emoji/wofi-emoji
 
 set $ws1 "1"
 set $ws2 "2"
@@ -202,7 +200,6 @@ bindsym $mod+o exec --no-startup-id $pavucontrol
 bindsym $mod+p exec --no-startup-id $nmtui
 bindsym $mod+m exec --no-startup-id $spotify_tui
 bindsym $mod+i exec --no-startup-id $floating_pcmanfm
-bindsym $mod+Period exec --no-startup-id $emoji_picker
 
 bindsym --release $mod+button2 kill
 bindsym $mod+button3 floating toggle
